fix text alignment

--- a/resources/style/landings/pages/referralhome/_content.scss
+++ b/resources/style/landings/pages/referralhome/_content.scss
@@ -33,6 +33,7 @@
 
 .ReferralHome-sectionContentCaptionSteps {
     font-weight: 900;
+    text-align: center;
     font-size: 36px;
     text-transform: uppercase;
     line-height: 37.5px;
